[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/Player/Player/Fishing/FishingMiniGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/Misc/exclamation icon.png" type="Texture" id=3]
[ext_resource path="res://World/Player/Player/Fishing/Fishing.gd" type="Script" id=4]
[ext_resource path="res://Characters/Weapon swings/fishing rod cast/fish hook.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Misc/Fishing/progress bar fill.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Misc/Fishing/progress bar.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=48]
font_path = "res://Assets/Fonts/TEMPLOG_.ttf"

[sub_resource type="DynamicFont" id=49]
size = 90
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 48 )

[sub_resource type="Theme" id=50]
default_font = SubResource( 49 )

[sub_resource type="Animation" id=45]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -67 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExclamationPoint:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitLabel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExclamationPoint:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=46]
resource_name = "bite"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 5.27803 ),
"update": 0,
"values": [ Vector2( 0, -66 ), Vector2( 0, -74 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExclamationPoint:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExclamationPoint:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=47]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("HitLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExclamationPoint:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Fishing" type="Node2D"]
script = ExtResource( 4 )

[node name="ExclamationPoint" type="Sprite" parent="."]
visible = false
position = Vector2( 17, -67 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="HitLabel" type="Label" parent="."]
visible = false
margin_left = -33.0
margin_right = 133.0
margin_bottom = 94.0
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 50 )
text = "HIT!"
align = 1

[node name="Line2D" type="Line2D" parent="."]
width = 2.0
default_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="CastedFishHook" type="Sprite" parent="."]
visible = false
position = Vector2( -4.5, -4.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false

[node name="FishingMiniGame" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -91, -170 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 45 )
anims/bite = SubResource( 46 )
anims/hit = SubResource( 47 )

[node name="ProgressBackground" type="TextureRect" parent="."]
visible = false
margin_left = -52.0
margin_top = -90.0
margin_bottom = -76.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="CastingProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -32.0
margin_top = -84.0
margin_bottom = -76.0
rect_scale = Vector2( 2, 2 )
value = 50.0
texture_progress = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="MoveBobTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="FishBiteTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="MoveBobTimer" to="." method="_on_MoveBobTimer_timeout"]
[connection signal="timeout" from="FishBiteTimer" to="." method="_on_FishBiteTimer_timeout"]
